--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,34 +1,12 @@
-.more-pens {
-  /* position: fixed;
-  left: 20px;
-  bottom: 20px;
-  z-index: 10;
-  font-family: "Montserrat";
-  font-size: 12px; */
-}
-
-a.white-mode, a.white-mode:link, a.white-mode:visited, a.white-mode:active {
-  /* font-family: "Montserrat";
-  font-size: 12px;
-  text-decoration: none;        
-  padding: 4px 8px;
-  color: #f7f7f7; */
-}
-
-a.white-mode:hover, a.white-mode:link:hover, a.white-mode:visited:hover, a.white-mode:active:hover {
-  /* background: #edf3f8;
-  color: #212121; */
-}
-
 .title {
-      z-index: 9999 !important;
-    position: absolute;
-    left: 50%;
-    top: 0%;
-    transform: translateX(-50%) translateY(-55%);
-    font-family: "Montserrat";
-    /* text-align: center; */
-    width: 100%;
+  z-index: 9999 !important;
+  position: absolute;
+  left: 50%;
+  top: 0%;
+  transform: translateX(-50%) translateY(-55%);
+  font-family: "Montserrat";
+  /* text-align: center; */
+  /* width: 100%;*/
 }
 
 .title h1 {
@@ -65,11 +43,12 @@ a.white-mode:hover, a.white-mode:link:hover, a.white-mode:visited:hover, a.white
 /* 爱心css */
 canvas {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
 }
 
 .img {
+  padding: 200px 0;
   /* z-index: 3; */
   height: 100vh;
   position: absolute;
@@ -83,10 +62,11 @@ canvas {
 #pinkboard {
   z-index: 2;
   position: relative;
-  top: 380px;
+  top: 620px;
   left: 0%;
-  /* height: 480px;  */
-  height: 99vh;  
+  /* height: 480px; */
+  height: 450vh;
+  width: 8500px;
   animation: show 5s forwards;
 }
 
