--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,131 +1,47 @@
-.title {
-  z-index: 9999 !important;
-  position: absolute;
-  left: 50%;
-  top: 0%;
-  transform: translateX(-50%) translateY(-55%);
-  font-family: "Montserrat";
-  /* text-align: center; */
-  /* width: 100%;*/
-}
 
-.title h1 {
+
+.title{
   /* z-index: 99; */
   position: relative;
-  color: #fff;
-  font-weight: 100;
-  font-size: 70px;
-  padding: 0;
-  margin: 0;
-  line-height: 1;
-  text-shadow: 0 0 10px #ff006c, 0 0 20px #ff006c, 0 0 30px #ff006c, 0 0 40px #ff417d, 0 0 70px #ff417d, 0 0 80px #ff417d, 0 0 100px #ff417d, 0 0 150px #ff417d;
+  top: 0%;
+  height: 100vh;
+  width: 100%;
 }
 
-.title h1 span {
-  /* z-index: 99; */
-  font-weight: 600;
-  padding: 0;
-  margin: 0;
-  color: #ffffff;
-}
-
-.title h3 {
-  /* z-index: 99; */
-  font-weight: 200;
-  font-size: 26px;
-  padding: 0;
-  margin: 0;
-  line-height: 1;
-  color: #ffffff;
-  letter-spacing: 2px;
-}
 
 /* 爱心css */
 canvas {
-  position: absolute;
-  /* width: 100%;
-  height: 100%; */
+  width: 0%;
+  height: 0%;
 }
 
 .img {
-  padding: 200px 0;
-  /* z-index: 3; */
-  height: 100vh;
-  position: absolute;
   width: 100%;
-  /* height: 1500px; */
-  object-fit: contain;
-  left: 0%;
-  top: 50%;
+  z-index: 1;
+  position: absolute;
+  height: 95vh;
 }
 
 #pinkboard {
   z-index: 2;
-  position: relative;
-  top: 620px;
+  position: absolute;
   left: 0%;
-  /* height: 480px; */
-  height: 450vh;
-  width: 8500px;
-  animation: show 5s forwards;
-}
-
-.STARDUST1 {
-  position: relative !important;
-  top: -60px;
+  top: -50px;
+  height: 95vh;
+  width: 100%;
+  animation: show 5s forwards; 
 }
 
 .STARDUST2 {
-  position: relative !important;
-  top: -40px;
-}
-
-.STARDUST3 {
-  position: relative !important;
-  top: -20px;
+  left: 0;
+  z-index: 3;
+  position: absolute;
+  /* animation: move 10s forwards;  */
 }
 
 /* 星空css */
-html, body {
-  padding: 0px;
-  margin: 0px;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-}
 
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  -webkit-filter: contrast(120%);
-  filter: contrast(120%);
-  background-image: radial-gradient(1600px at 70% 120%, rgba(33, 39, 80, 1) 10%, #020409 100%) !important;        /* background-color: black; */
-}
-
-.container2 {
-
-  z-index: 1;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-image: radial-gradient(1600px at 70% 120%, rgba(33, 39, 80, 1) 10%, #020409 100%) !important;
-}
-
-.content {
-  width: inherit;
-  height: inherit;
-  width: 100%;
-  height: 100%;
-  background-image: radial-gradient(1600px at 70% 120%, rgba(33, 39, 80, 1) 10%, #020409 100%) !important;
-}
-
-#universe {
-  width: 100%;
-  height: 100%;
-}
 @keyframes show {
-  
   0%    { opacity: 0; }
 
   25%   { opacity: 0.2; }
@@ -135,5 +51,18 @@ body {
   75%   { opacity: 0.6; }
 
   100%  { opacity: 0.8; }
+
+}
+/* button move*/
+@keyframes move {
+  0%    { opacity: 0; left: 0; top: 90%}
+
+  25%   { opacity: 0.2; left: 10%; top: 92%}
+
+  50%   { opacity: 0.4; left: 20%;  top: 88%}
+
+  75%   { opacity: 0.6; left: 30%; top: 92%}
+
+  100%  { opacity: 0.8; left: 45%; top: 90%}
 
 }
