--- a/public/css/main_2.css
+++ b/public/css/main_2.css
@@ -1,3 +1,13 @@
+.guiem{
+  font-weight: bold;
+  font-size: 50px;
+  font-style: oblique;
+  width: 50%;
+  top: 10%;
+  left: 40%;
+  z-index: 9;
+  position: absolute;
+}
 /* note */
 .note {
   width: 50%;
@@ -16,39 +26,56 @@
   position: absolute;
   overflow: hidden;
   white-space: nowrap;
+  font-weight: 600;
+  font-size: x-large;
+  font-family: cursive;
   animation: type-text 4s steps(40);
 }
 
-.text-1, .text-2, .text-3, .text-4{
+.text-1, .text-2, .text-3, .text-4, .text-5, .text-6{
   left: 5%;
   right: 5%;
   bottom: 5%;
   position: absolute;
   word-break: break-word;
+  font-size: 30px;
+  font-family: Arial, Helvetica, system-ui;
 }
 .text-1{
   opacity: 0;
-  top: 25%;
+  top: 30%;
   animation-delay: 3s;
   animation: showtext 1s linear forwards;
 }
 .text-2{
   opacity: 0;
-  top: 35%;
-  animation-delay: 10s;
+  top: 40%;
+  animation-delay: 6s;
   animation: showtext 2s linear forwards;
 }
 .text-3{
   opacity: 0;
-  top: 45%;
-  animation-delay: 10s;
+  top: 50%;
+  animation-delay: 9s;
   animation: showtext 3s linear forwards;
 }
 .text-4{
   opacity: 0;
-  top: 55%;
-  animation-delay: 10s;
+  top: 60%;
+  animation-delay: 12s;
   animation: showtext 4s linear forwards;
+}
+.text-5{
+  opacity: 0;
+  top: 70%;
+  animation-delay: 15s;
+  animation: showtext 5s linear forwards;
+}
+.text-6{
+  opacity: 0;
+  top: 80%;
+  animation-delay: 18s;
+  animation: showtext 6s linear forwards;
 }
 @keyframes type-text {
   0% {
@@ -72,8 +99,8 @@
 .btn-click{
   z-index: 9;
   position: absolute;
-  top: 70%;
-  left: 55%;
+  top: 75%;
+  left: 50%;
   background: rgb(255, 224, 224);
   font-weight: bold;
   color: #ff0000;
@@ -91,15 +118,15 @@ img {
   width: 100%;
 }
 .avt-box{
-  top: 30%;
-  left: 50%;
+  top: 20%;
+  left: 40%;
 	display: block;
 	padding:1px;
 	background: rgba(0, 0, 0, 0.3) none repeat scroll 0 0;
 	z-index:9;
   position: absolute;
-  width: 300px;
-  height: 300px;
+  width: 500px;
+  height: 500px;
   background: #111845a6;
   box-sizing: border-box;
   overflow: hidden;
